# SVGeoMagOrbit

./: .gitignore  CMakeLists.txt  README.md
src/: eci_ecef.cpp  eci_ecef.hpp  igrf.cpp  igrf.hpp  main.cpp  orbit_propagator.cpp  orbit_propagator.hpp  stk_loader.cpp  stk_loader.hpp  time_utils.cpp  time_utils.hpp
